--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <li>item1</li>
 </ul>
 <select>
-    <opion>choix 1</opion>
+    <option>choix 1</option>
     <option>choix 2</option>
-    </select>
+</select>
     <input type="radio" name="boisson"> café</input>
      <input type="radio" name="boisson"> chocolat</input>
+<br>
 <span>&#10003;</span> Aller chez IKEA 
 <span>&#10003;</span> Faire le e-learning 
 <span>&#10003;</span> Trouver un stage 
