Mise en place du thème

--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>My Life</title>
-</head>
-<body>
-<h1><span>&#9884;</span> Bonjour à tous !<span>&#9884;</span> </h1>
-<p>VOici la liste des choses qui me restent a faire. <br /> Pour le reste de ma vie</p>
-<ul>
-<li>item1</li>
-</ul>
-<select>
-    <option>choix 1</option>
-    <option>choix 2</option>
-</select>
-    <input type="radio" name="boisson"> café</input>
-     <input type="radio" name="boisson"> chocolat</input>
-<br>
-<span>&#10003;</span> Aller chez IKEA 
-<span>&#10003;</span> Faire le e-learning 
-<span>&#10003;</span> Trouver un stage 
-<span>&#10003;</span> Aller au zoo 
-<span>&#10003;</span> Manger 
-<span>&#10003;</span> Dormir 
-Au depart je voulais mettre un gif drole mais j'ai pas trouve comment faire. Je n'arrive pas non plus a faire afficher les accents... J'ai beaucoup de progres a faire ! </body>
-</html>
+---
+layout: home
+title: GitHub Test
+permalink: /
+---
+<section class="container-lg p-responsive py-5 py-md-6 my-lg-6">
+  <div class="clearfix gutter-spacious">
+    <div class="mb-3 mb-md-5 col-md-6 float-left">
+      <h2 class="alt-h3 mb-2">
+        Test github page
+      </h2>
+      <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="mb-3 mb-md-5 col-md-6 float-left">
+      <h2 class="alt-h3 mb-2">
+Lorem ipsum dolor sit amet.
+      </h2>
+      <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+
+</section>
