--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ Lorem ipsum dolor sit amet.
 <li>Athlétisme</li>
 <li>Ski</li>          
 </ul>
-  </div>
+  </div>    
 <a href="/contact">Contact</a>
+<a href="mailto:laimewilliam@gmail.Com"> Contactez-moi </a>
 
 </section>
