--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,11 @@ permalink: /contact
   <div class="clearfix gutter-spacious">
     <div class="mb-3 mb-md-5 col-md-6 float-left">
       <h3 class="alt-h3 mb-2">
-          <form action="/action.php" method="post">Nom Pr&eacute;nom: <input name="name" type="text" /> <br /> Age: <input max="99" min="1" name="age" step="1" type="number" value="18" /> <br /><select name="gender">
-<option selected="selected" value="male">Male</option>
-<option value="female">Female</option>
-</select><br /> <input checked="checked" name="newsletter" type="radio" value="daily" /> Daily <input name="newsletter" type="radio" value="weekly" /> Weekly<br /> <textarea cols="20" name="comments" rows="5">Comment</textarea><br /> <label><input name="terms" type="checkbox" value="tandc" />Accept terms</label> <br /> <input type="submit" value="Submit" /></form>
+          <form method="POST" action="https://formspree.io/YOUREMAILHERE">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Test Message"></textarea>
+  <button type="submit">Send Test</button>
+</form>
         Test github page
       </h3>
       <p class="text-gray">Coucou c'est ma page de contact.</p>
