--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ permalink: /contact
   <div class="clearfix gutter-spacious">
     <div class="mb-3 mb-md-5 col-md-6 float-left">
       <h3 class="alt-h3 mb-2">
-          <form method="POST" action="https://formspree.io/YOUREMAILHERE">
+          <form method="POST" action="https://formspree.io/laimewilliam@gmail.com">
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Test Message"></textarea>
   <button type="submit">Send Test</button>
