--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Lorem ipsum dolor sit amet.
   </div>    
 <a href="/contact">Contact</a>
     <br/>
-<a href="mailto:laimewilliam@gmail.Com"> Contactez-moi </a>
+<a href="mailto:laimewilliam@gmail.com"> Contactez-moi </a>
 
 
 </section>
