--- a/contact.html
+++ b/contact.html
@@ -32,3 +32,13 @@ Lorem ipsum dolor sit amet.
   </div>
 
 </section>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-54115446-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-54115446-4');
+</script>
